update package versions
